fix(material/list): remove unnecessary high contrast styles
Removes some styles from the list meant for high contrast mode that we inherited from MDC. They aren't necessary, because we have our own way of handling high contrast styles and they were actively making `mat-option` worse by adding extra borders in several cases.

--- a/src/material/list/_list-inherited-structure.scss
+++ b/src/material/list/_list-inherited-structure.scss
@@ -1,4 +1,3 @@
-@use '@angular/cdk';
 @use '../core/style/vendor-prefixes';
 @use '../core/tokens/m2/mdc/list' as tokens-mdc-list;
 @use '../core/tokens/token-utils';
@@ -92,31 +91,6 @@
         align-self: flex-start;
         margin-top: 16px;
       }
-    }
-
-    &.mdc-list-item--selected::before,
-    &.mdc-list-item--selected:focus::before,
-    &:not(.mdc-list-item--selected):focus::before {
-      position: absolute;
-      box-sizing: border-box;
-      width: 100%;
-      height: 100%;
-      top: 0;
-      left: 0;
-      border: 1px solid transparent;
-      border-radius: inherit;
-      content: '';
-      pointer-events: none;
-
-      @include cdk.high-contrast {
-        border-color: CanvasText;
-      }
-    }
-
-    &.mdc-list-item--selected:focus::before,
-    &.mdc-list-item--selected::before {
-      border-width: 3px;
-      border-style: double;
     }
   }
 
